--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,6 +10,17 @@
                 <label for="city" class="form-label w-25">Enter City Name:</label>
                 <input type="text" class="form-control" id="city" name="city" placeholder="Enter city name" required>
             </div>
+            <div class="form-group mt-3">
+                <label class="form-label w-25">Select Response Format:</label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="format" id="jsonFormat" value="json" checked>
+                    <label class="form-check-label" for="jsonFormat">JSON</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="format" id="xmlFormat" value="xml">
+                    <label class="form-check-label" for="xmlFormat">XML</label>
+                </div>
+            </div>
             <button type="submit" class="btn btn-primary mt-3">Get Weather</button>
         </form>
 
