--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,37 +3,54 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Weather Forecast</h1>
-    <div class="card-body">
-        <form method="post" asp-controller="Home" asp-action="GetWeather">
-            <div class="form-group">
-                <label for="city" class="form-label w-25">Enter City Name:</label>
-                <input type="text" class="form-control" id="city" name="city" placeholder="Enter city name" required>
-            </div>
-            <div class="form-group mt-3">
-                <label class="form-label w-25">Select Response Format:</label>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="format" id="jsonFormat" value="json" checked>
-                    <label class="form-check-label" for="jsonFormat">JSON</label>
+    <div class="card-group">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h1 class="display-4">Weather Forecast</h1>
+                <div class="card-body">
+                    <form method="post" asp-controller="Home" asp-action="GetWeather">
+                        <div class="form-group">
+                            <label for="city" class="form-label w-25">Select City:</label>
+                            <select class="form-select" id="city" name="city" required>
+                                <option value="">Choose a city...</option>
+                                <option value="Manila">Manila</option>
+                                <option value="Quezon City">Quezon City</option>
+                                <option value="Davao City">Davao City</option>
+                                <option value="Caloocan">Caloocan</option>
+                                <option value="Cebu City">Cebu City</option>
+                                <option value="Zamboanga City">Zamboanga City</option>
+                                <option value="Taguig">Taguig</option>
+                                <option value="Antipolo">Antipolo</option>
+                                <option value="Pasig">Pasig</option>
+                                <option value="Cagayan de Oro">Cagayan de Oro</option>
+                            </select>
+                        </div>
+                        <div class="form-group mt-3">
+                            <label class="form-label w-25">Select Response Format:</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="format" id="jsonFormat" value="json" checked>
+                                <label class="form-check-label" for="jsonFormat">JSON</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="format" id="xmlFormat" value="xml">
+                                <label class="form-check-label" for="xmlFormat">XML</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Get Weather</button>
+                    </form>
+                    @if (ViewData["WeatherData"] != null)
+                    {
+                        <div class="mt-4">
+                            <h3>Weather Results</h3>
+                            <div class="card">
+                                <div class="card-body">
+                                    @ViewData["WeatherData"]
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="format" id="xmlFormat" value="xml">
-                    <label class="form-check-label" for="xmlFormat">XML</label>
-                </div>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Get Weather</button>
-        </form>
-
-        @if (ViewData["WeatherData"] != null)
-        {
-            <div class="mt-4">
-                <h3>Weather Results</h3>
-                <div class="card">
-                    <div class="card-body">
-                        @ViewData["WeatherData"]
-                    </div>
-                </div>
-            </div>
-        }
+        </div>
     </div>
 </div>
